--- a/berita.html
+++ b/berita.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <link rel="stylesheet" href="css/global_1.css" />
+    <link rel="stylesheet" href="css/global_1.css"/>
     <link rel="stylesheet" href="css/berita.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <style>
       @font-face {
@@ -37,28 +38,47 @@
   </head>
   <body>
     <div class="berita">
-      <header class="header2">
-        <img
-          class="logo-icon4"
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
+        <div class="container px-5">
+            <a class="navbar-brand fw-bold" href="index.html">
+              <img
+          class="logo-icon"
           loading="lazy"
           alt=""
           src="assets/img/logo.png"
-          id="dashboard"
         />
-
-        <div class="menu-options">
-          <b class="beranda2">Beranda</b>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="bi-list"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
+                    <li class="nav-item"><a class="nav-link me-lg-3">Beranda</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-3">Survey</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-3">Kandidat</a></li>
+                    <li class="nav-item"><a class="nav-link me-lg-3">Bantuan</a></li>
+                </ul>
+                <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
+                    <span class="d-flex align-items-center">
+                        <i class="bi-chat-text-fill me-2"></i>
+                        <span class="small">Send Feedback</span>
+                    </span>
+                </button>
+            </div>
         </div>
-        <div class="menu-options1">
-          <b class="survey3">Survey</b>
-        </div>
-        <div class="candidate">
-          <b class="kandidat2">Kandidat</b>
-        </div>
-        <div class="menu-options2">
-          <b class="bantuan4">Bantuan</b>
-        </div>
-      </header>
+    </nav>
+    <header class="header">
+      <div class="home-survey-help">
+        <h3 class="beranda">Beranda</h3>
+      </div>
+      <div class="home-survey-help1">
+        <h3 class="survey">Survey</h3>
+      </div>
+      <div class="candidate-info">
+        <h3 class="kandidat">Kandidat</h3>
+      </div>
+    </header>
       <main class="background-group">
         <div class="background2"></div>
         <section class="news-content-wrapper">
@@ -324,31 +344,8 @@
         </div>
       </footer>
     </div>
-    <script>
-      var tombolDetailPaslon1 = document.getElementById("dashboard");
-      if (tombolDetailPaslon1) {
-        tombolDetailPaslon1.addEventListener("click", function (e) {
-          window.location.href = "./index.html";
-        });
-      }
-      var tombolDetailPaslon1 = document.getElementById("newsItemsContainer1");
-      if (tombolDetailPaslon1) {
-        tombolDetailPaslon1.addEventListener("click", function (e) {
-          window.location.href = "./berita.html";
-        });
-      }
-      var tombolDetailPaslon1 = document.getElementById("newsItemsContainer2");
-      if (tombolDetailPaslon1) {
-        tombolDetailPaslon1.addEventListener("click", function (e) {
-          window.location.href = "./berita.html";
-        });
-      }
-      var tombolDetailPaslon1 = document.getElementById("newsItemsContainer3");
-      if (tombolDetailPaslon1) {
-        tombolDetailPaslon1.addEventListener("click", function (e) {
-          window.location.href = "./berita.html";
-        });
-      }
-      </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
